--- a/RegistroAdmin/src/main/resources/application.properties
+++ b/RegistroAdmin/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=SalasDeComputo
+spring.datasource.url=jdbc:mysql://localhost:3306/gestionsalas
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
